phase2/cool.output
Terminals unused in grammar

   ERROR


State 11 conflicts: 1 shift/reduce
State 116 conflicts: 15 shift/reduce
State 134 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | error ';' class_list

    5 class: CLASS TYPEID '{' feature_list '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    7 feature_list: feature_list feature ';'
    8             | /* empty */
    9             | feature_list feature ';' error ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr

   13 formal_list: formal_list_oneOrMore
   14            | /* empty */

   15 formal_list_oneOrMore: formal
   16                      | formal_list_oneOrMore ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr_list: /* empty */
   19          | expr_list_oneOrMore

   20 expr_list_oneOrMore: expr
   21                    | expr_list_oneOrMore ',' expr

   22 expr: OBJECTID ASSIGN expr
   23     | expr '.' OBJECTID '(' expr_list ')'
   24     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   25     | OBJECTID '(' expr_list ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_list_semicolon '}'
   29     | LET let_expr
   30     | CASE expr OF case_list ESAC
   31     | NEW TYPEID
   32     | ISVOID expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '~' expr
   38     | expr '<' expr
   39     | expr LE expr
   40     | expr '=' expr
   41     | NOT expr
   42     | '(' expr ')'
   43     | OBJECTID
   44     | INT_CONST
   45     | STR_CONST
   46     | BOOL_CONST

   47 expr_list_semicolon: expr ';'
   48                    | expr_list_semicolon expr ';'
   49                    | error ';' expr_list_semicolon
   50                    | expr_list_semicolon error ';'

   51 let_expr: OBJECTID ':' TYPEID IN expr
   52         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   53         | OBJECTID ':' TYPEID ',' let_expr
   54         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   55         | error ',' let_expr

   56 case_list: case
   57          | case_list case

   58 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 23 24 25 42
')' (41) 10 23 24 25 42
'*' (42) 35
'+' (43) 33
',' (44) 16 21 53 54 55
'-' (45) 34
'.' (46) 23 24
'/' (47) 36
':' (58) 10 11 12 17 51 52 53 54 58
';' (59) 2 3 4 7 9 47 48 49 50 58
'<' (60) 38
'=' (61) 40
'@' (64) 24
'{' (123) 5 6 10 28
'}' (125) 5 6 10 28
'~' (126) 37
error (256) 4 9 49 50 55
CLASS (258) 5 6
ELSE (259) 26
FI (260) 26
IF (261) 26
IN (262) 51 52
INHERITS (263) 6
LET (264) 29
LOOP (265) 27
POOL (266) 27
THEN (267) 26
WHILE (268) 27
CASE (269) 30
ESAC (270) 30
OF (271) 30
DARROW (272) 58
NEW (273) 31
ISVOID (274) 32
STR_CONST (275) 45
INT_CONST (276) 44
BOOL_CONST (277) 46
TYPEID (278) 5 6 10 11 12 17 24 31 51 52 53 54 58
OBJECTID (279) 10 11 12 17 22 23 24 25 43 51 52 53 54 58
ASSIGN (280) 12 22 52 54
NOT (281) 41
LE (282) 39
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3 4
class (48)
    on left: 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 5 6 7 9
feature (50)
    on left: 10 11 12, on right: 7 9
formal_list (51)
    on left: 13 14, on right: 10
formal_list_oneOrMore (52)
    on left: 15 16, on right: 13 16
formal (53)
    on left: 17, on right: 15 16
expr_list (54)
    on left: 18 19, on right: 23 24 25
expr_list_oneOrMore (55)
    on left: 20 21, on right: 19 21
expr (56)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46, on right: 10 12 20 21 22 23 24 26 27 30 32
    33 34 35 36 37 38 39 40 41 42 47 48 51 52 54 58
expr_list_semicolon (57)
    on left: 47 48 49 50, on right: 28 48 49 50
let_expr (58)
    on left: 51 52 53 54 55, on right: 29 53 54 55
case_list (59)
    on left: 56 57, on right: 30 57
case (60)
    on left: 58, on right: 56 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    4 class_list: error . ';' class_list

    ';'  shift, and go to state 6


state 2

    5 class: CLASS . TYPEID '{' feature_list '}'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class ';'

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class . ';'

    ';'  shift, and go to state 10


state 6

    4 class_list: error ';' . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    class_list  go to state 11
    class       go to state 5


state 7

    5 class: CLASS TYPEID . '{' feature_list '}'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 14


state 10

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 11

    3 class_list: class_list . class ';'
    4           | error ';' class_list .

    CLASS  shift, and go to state 2

    CLASS     [reduce using rule 4 (class_list)]
    $default  reduce using rule 4 (class_list)

    class  go to state 9


state 12

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 15


state 13

    5 class: CLASS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 16


state 14

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


state 15

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 17


state 16

    5 class: CLASS TYPEID '{' feature_list . '}'
    7 feature_list: feature_list . feature ';'
    9             | feature_list . feature ';' error ';'

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


state 17

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 21


state 18

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 19

    5 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


state 20

    7 feature_list: feature_list feature . ';'
    9             | feature_list feature . ';' error ';'

    ';'  shift, and go to state 24


state 21

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    7 feature_list: feature_list . feature ';'
    9             | feature_list . feature ';' error ';'

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 25

    feature  go to state 20


state 22

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 14 (formal_list)

    formal_list            go to state 27
    formal_list_oneOrMore  go to state 28
    formal                 go to state 29


state 23

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 30


state 24

    7 feature_list: feature_list feature ';' .
    9             | feature_list feature ';' . error ';'

    error  shift, and go to state 31

    OBJECTID  reduce using rule 7 (feature_list)
    '}'       reduce using rule 7 (feature_list)


state 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 6 (class)


state 26

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


state 27

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 33


state 28

   13 formal_list: formal_list_oneOrMore .
   16 formal_list_oneOrMore: formal_list_oneOrMore . ',' formal

    ','  shift, and go to state 34

    $default  reduce using rule 13 (formal_list)


state 29

   15 formal_list_oneOrMore: formal .

    $default  reduce using rule 15 (formal_list_oneOrMore)


state 30

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 11 (feature)


state 31

    9 feature_list: feature_list feature ';' error . ';'

    ';'  shift, and go to state 36


state 32

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


state 33

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 38


state 34

   16 formal_list_oneOrMore: formal_list_oneOrMore ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 39


state 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


state 36

    9 feature_list: feature_list feature ';' error ';' .

    $default  reduce using rule 9 (feature_list)


state 37

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 38

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


state 39

   16 formal_list_oneOrMore: formal_list_oneOrMore ',' formal .

    $default  reduce using rule 16 (formal_list_oneOrMore)


state 40

   26 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 56


state 41

   29 expr: LET . let_expr

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let_expr  go to state 59


state 42

   27 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 60


state 43

   30 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


state 44

   31 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


state 45

   32 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 63


state 46

   45 expr: STR_CONST .

    $default  reduce using rule 45 (expr)


state 47

   44 expr: INT_CONST .

    $default  reduce using rule 44 (expr)


state 48

   46 expr: BOOL_CONST .

    $default  reduce using rule 46 (expr)


state 49

   22 expr: OBJECTID . ASSIGN expr
   25     | OBJECTID . '(' expr_list ')'
   43     | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 43 (expr)


state 50

   41 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 66


state 51

   37 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


state 52

   28 expr: '{' . expr_list_semicolon '}'

    error       shift, and go to state 68
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr                 go to state 69
    expr_list_semicolon  go to state 70


state 53

   42 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 71


state 54

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   23 expr: expr . '.' OBJECTID '(' expr_list ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 12 (feature)


state 55

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 81


state 56

   23 expr: expr . '.' OBJECTID '(' expr_list ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   26     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 57
